[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engine-orchestra"
version = "0.1.0"
description = "Dependency-aware parallel task execution framework"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Eliot Cohen Bacrie", email = "contact@oravys.com" },
]
keywords = [
    "parallel",
    "concurrency",
    "dependency",
    "topological-sort",
    "task-execution",
    "pipeline",
    "orchestration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Oravys/engine-orchestra"
Repository = "https://github.com/Oravys/engine-orchestra"
Issues = "https://github.com/Oravys/engine-orchestra/issues"

[tool.hatch.build.targets.wheel]
packages = ["engine_orchestra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
